# sigma-rust

./: Cargo.toml  README.md
.github/workflows/: ci.yml
bindings/ergo-lib-c/: Cargo.toml
bindings/ergo-lib-c-core/: Cargo.toml
bindings/ergo-lib-c-core/src/: address.rs  constant.rs  context_extension.rs  derivation_path.rs  ergo_box.rs  ext_pub_key.rs  ext_secret_key.rs  json.rs  lib.rs  mnemonic.rs  parameters.rs  transaction.rs
bindings/ergo-lib-c/src/: address.rs  constant.rs  context_extension.rs  derivation_path.rs  ergo_box.rs  ext_pub_key.rs  ext_secret_key.rs  lib.rs  mnemonic.rs  parameters.rs
bindings/ergo-lib-jni/: Cargo.toml
bindings/ergo-lib-wasm/: Cargo.toml
bindings/ergo-lib-wasm/scripts/: set_exports.js
bindings/ergo-lib-wasm/src/: ast.rs  context_extension.rs  json.rs  token.rs  transaction.rs  verifier.rs  wallet.rs
bindings/ergo-lib-wasm/tests/: transaction.rs
bindings/ergo-lib-wasm/tests_browser/: test_rest_api.js
ergo-chain-generation/src/: chain_generation.rs  fake_pow_scheme.rs
ergo-chain-types/: Cargo.toml
ergo-chain-types/src/: autolykos_pow_scheme.rs  block_id.rs  digest32.rs  ec_point.rs  header.rs  lib.rs  peer_addr.rs
ergo-lib/: Cargo.toml
ergo-lib/src/: lib.rs  wallet.rs
ergo-lib/src/chain/: json.rs  parameters.rs  transaction.rs
ergo-lib/src/wallet/: box_selector.rs  deterministic.rs  ext_pub_key.rs  ext_secret_key.rs  mnemonic_generator.rs  multi_sig.rs  signing.rs  tx_builder.rs  tx_context.rs
ergo-merkle-tree/: Cargo.toml
ergo-nipopow/: Cargo.toml
ergo-nipopow/src/: autolykos_pow_scheme.rs  lib.rs  nipopow_algos.rs  nipopow_proof.rs
ergo-p2p/: Cargo.toml
ergo-p2p/src/: peer_spec.rs
ergo-p2p/src/message/: handshake.rs
ergo-rest/: Cargo.toml
ergoscript-compiler/src/: script_env.rs
ergotree-interpreter/: Cargo.toml
ergotree-interpreter/src/: eval.rs  lib.rs
ergotree-interpreter/src/eval/: and.rs  apply.rs  atleast.rs  bin_op.rs  bit_inversion.rs  block.rs  bool_to_sigma.rs  byte_array_to_bigint.rs  byte_array_to_long.rs  calc_blake2b256.rs  calc_sha256.rs  coll_append.rs  coll_by_index.rs  coll_exists.rs  coll_filter.rs  coll_fold.rs  coll_forall.rs  coll_map.rs  coll_size.rs  coll_slice.rs  collection.rs  context.rs  cost_accum.rs  costs.rs  create_avl_tree.rs  create_prove_dh_tuple.rs  create_provedlog.rs  decode_point.rs  deserialize_context.rs  deserialize_register.rs  downcast.rs  env.rs  error.rs  exponentiate.rs  expr.rs  extract_amount.rs  extract_bytes.rs  extract_bytes_with_no_ref.rs  extract_creation_info.rs  extract_id.rs  (+36 more)
ergotree-interpreter/src/json/: hint.rs
ergotree-interpreter/src/sigma_protocol/: dht_protocol.rs  dlog_protocol.rs  private_input.rs  prover.rs  verifier.rs  wscalar.rs
ergotree-interpreter/tests/: signing_spec_tests.rs
ergotree-ir/: Cargo.toml
ergotree-ir/src/: bigint256.rs  chain.rs  ergo_tree.rs  lib.rs  mir.rs  pretty_printer.rs  reference.rs  source_span.rs  traversable.rs  type_check.rs  util.rs
ergotree-ir/src/chain/: address.rs  context.rs  context_extension.rs  ergo_box.rs  json.rs  token.rs  tx_id.rs
ergotree-ir/src/ergo_tree/: tree_header.rs
ergotree-ir/src/mir/: and.rs  apply.rs  atleast.rs  avl_tree_data.rs  bin_op.rs  bit_inversion.rs  block.rs  bool_to_sigma.rs  byte_array_to_bigint.rs  byte_array_to_long.rs  calc_blake2b256.rs  calc_sha256.rs  coll_append.rs  coll_by_index.rs  coll_exists.rs  coll_filter.rs  coll_fold.rs  coll_forall.rs  coll_map.rs  coll_size.rs  coll_slice.rs  collection.rs  constant.rs  create_avl_tree.rs  create_prove_dh_tuple.rs  create_provedlog.rs  decode_point.rs  deserialize_context.rs  deserialize_register.rs  downcast.rs  exponentiate.rs  expr.rs  extract_amount.rs  extract_bytes.rs  extract_bytes_with_no_ref.rs  extract_creation_info.rs  extract_id.rs  extract_reg_as.rs  extract_script_bytes.rs  (+27 more)
gf2_192/: Cargo.toml
gf2_192/src/: gf2_192.rs  gf2_192poly.rs
sigma-ser/: Cargo.toml
sigma-ser/src/: lib.rs  scorex_serialize.rs  vlq_encode.rs
sigma-util/: Cargo.toml
sigma-util/src/: vec_ext.rs
(+59 files in other folders)
