[workspace]
resolver = "2"
members = [
    "sigma-test-util",
    "sigma-ser",
    "sigma-util",
    "ergoscript-compiler",
    "ergotree-ir",
    "ergotree-interpreter",
    "ergo-lib",
    "ergo-p2p",
    "ergo-chain-generation",
    "ergo-rest",
    "ergo-chain-types",
    "ergo-nipopow",
    "ergo-merkle-tree",
    "gf2_192",
    "bindings/ergo-lib-wasm",
    "bindings/ergo-lib-c-core",
    "bindings/ergo-lib-c",
    "bindings/ergo-lib-jni",
]

[workspace.package]
repository = "https://github.com/ergoplatform/sigma-rust"
edition = "2021"

[workspace.dependencies]
sigma-util = { version = "^0.18.0", path = "./sigma-util" }
sigma-ser = { version = "^0.19.0", path = "./sigma-ser", default-features = false }
ergotree-ir = { version = "^0.28.0", path = "./ergotree-ir", default-features = false }
ergo-chain-types = { version = "^0.15.0", path = "./ergo-chain-types", default-features = false }
sigma-test-util = { version = "^0.3.0", path = "./sigma-test-util" }
ergoscript-compiler = { version = "^0.24.0", path = "./ergoscript-compiler" }
ergotree-interpreter = { version = "^0.28.0", path = "./ergotree-interpreter" }
ergo-nipopow = { version = "^0.15", path = "./ergo-nipopow" }
ergo-merkle-tree = { version = "^0.15.0", path = "./ergo-merkle-tree" }
ergo-rest = { version = "^0.13.0", path = "./ergo-rest" }
ergo-lib = { version = "^0.28.0", path = "./ergo-lib" }
k256 = { version = "0.13.1", default-features = false, features = [
    "arithmetic",
    "ecdsa",
] } # TODO: look into precomputed_tables feature for std, could be useful for speeding up signature verification
elliptic-curve = { version = "0.12", features = ["ff"] }
derive_more = { version = "0.99", features = [
    "add",
    "add_assign",
    "mul",
    "not",
    "from",
    "into",
    "try_into",
    "from_str",
    "display",
] }
num-derive = "0.4.2"
thiserror = { version = "2.0.1", default-features = false }
bounded-vec = { git = "https://github.com/SethDusek/bounded-vec", branch = "no_std" } # TODO: merge no_std support in bounded-vec
bitvec = { version = "1.0.1", default-features = false, features = ["alloc"] }
blake2 = { version = "0.10.6", default-features = false }
sha2 = { version = "0.10", default-features = false }
num-traits = { version = "0.2.14", default-features = false }
num-integer = { version = "0.1.44", default-features = false }
num-bigint = { version = "0.4.0", default-features = false }
lazy_static = { version = "1.4", features = ["spin_no_std"] }
bs58 = { version = "0.4.0", default-features = false, features = ["alloc"] }
base16 = { version = "0.2.1", default-features = false, features = ["alloc"] }
base64 = { version = "0.13.0", default-features = false, features = ["alloc"] }
indexmap = { version = "2.6.0", default-features = false } #TODO: enable std conditionally
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = [
    "arbitrary_precision",
    "preserve_order",
] }
serde_with = { version = "1.9.1", features = ["json"] }
rand = "0.8.5"
bytes = { version = "1.1", default-features = false }
byteorder = "1"
futures = "0.3"
tokio = { version = "1.15.0", features = ["full"] }
tokio-stream = { version = "0.1.8", features = ["sync", "time"] }
tokio-util = { version = "0.6.9", features = ["codec"] }
bounded-integer = { version = "^0.5", features = ["types"] }
url = "~2.2"
getrandom = { version = "0.2.7" }
itertools = "0.10.3"
miette = { version = "5", features = ["fancy"] }
hashbrown = { version = "0.14.3", features = ["serde"] }
core2 = { version = "0.4.0", default-features = false, features = ["alloc"] }
# dev-dependencies
proptest = { version = "1.5.0", default-features = false, features = [
    "alloc",
    "std",
] } # TODO: consider enabling std
proptest-derive = "0.3"
pretty_assertions = "1.3"
wasm-bindgen-test = "0.3.37"
expect-test = "1.4.1"
[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
